--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "170276f7-c677-4142-b8b6-b4f4ee50400b"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
